namespace BLL.Entities.Recipe;

public enum Category
{
    Appetizer = 0,
    Breakfast = 1,
    Brunch = 2,
    Dessert = 3,
    Dinner = 4,
    Lunch = 5,
    MainCourse = 6,
    Snack = 7,
    Soup = 8,
    SideDish = 9,
    Salad = 10,
    Sauce = 11,
    Drink = 12,
    Beverage = 13,
    Cocktail = 14,
    Smoothie = 15,
    Other = 16,
    None = 17
}