@startuml

skinparam groupInheritance 2

class Recipe {
    Guid Id
    string Name
    string ImageUrl
    string Description
    TimeSpan PreparationTime
    DateTime CreatedAt
    DateTime UpdatedAt
}

class Cook {
    Guid Id
    string UserName
    string FullName
    string ImageUrl
    DateTime CreatedAt
}

class Credential {
    string Email
    string EncryptedPassword
    DateTime UpdatedAt
}

class Ingredient {
    string Name
    string Description
    decimal Quantity
}

enum Unit {
    Milliliter,
    Deciliter,
    Liter,
    Milligram,
    Gram,
    Kilogram,
    Teaspoon,
    Tablespoon,
    FluidOunce,
    Cup,
    Pint,
    Quart,
    Gallon,
    Pound,
    Ounce
}

class PreparationStep {
    int Order
    string Description
}

enum Category {
    Appetizer
    MainCourse
    Dessert
}

class Review {
    Guid ReviewerId
    string Comment
    int Rating
    DateTime CreatedAt
}

Cook --> "*" Recipe : "Recipes"
Cook --> "1" Credential : "Credential"
Cook --> "*" Review : "Reviews"
Cook --> "*" Cook : "Followers"

Recipe --> "*" Ingredient : "Ingredients"
Recipe --> "*" PreparationStep : "PreparationSteps"
Recipe --> "*" Category : "Categories"
Recipe --> "*" Cook : "Likers"

Ingredient --> "1" Unit : "Unit"

Review --> "1" Cook : "Reviewer" 
Review "*" <-- Recipe : "Reviews"

@enduml